--- a/SpotNSave/AndroidManifest.xml
+++ b/SpotNSave/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.epicelements.spotnsave"
     android:installLocation="auto"
     android:versionCode="14"
-    android:versionName="2.1" >
+    android:versionName="2.1">
 
     <supports-screens
         android:anyDensity="true"
@@ -61,6 +62,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
+        tools:replace="android:theme"
         android:theme="@style/Theme.Sherlock.Light.DarkActionBar" >
         <activity
             android:name="com.epicelements.spotnsave.Splash"
