--- a/roundedimageview/build.gradle
+++ b/roundedimageview/build.gradle
@@ -1,91 +1,34 @@
-apply plugin: 'android-library'
-apply plugin: 'maven'
-apply plugin: 'signing'
+apply plugin: 'com.android.library'
 
-sonatypeUsername = project.hasProperty('sonatypeUsername') ? sonatypeUsername : ""
-sonatypePassword = project.hasProperty('sonatypePassword') ? sonatypePassword : ""
+dependencies {
+    compile fileTree(dir: 'libs', include: '*.jar')
+}
 
 android {
-  compileSdkVersion 19
-  buildToolsVersion '19.0.1'
+    compileSdkVersion 14
+    buildToolsVersion "22.0.1"
 
-  sourceSets {
-    main {
-      manifest.srcFile 'AndroidManifest.xml'
-      java.srcDirs = ['src']
-      res.srcDirs = ['res']
-    }
-  }
-}
-
-task androidJavadocs(type: Javadoc) {
-  source = android.sourceSets.main.allJava
-}
-
-task androidJavadocsJar(type: Jar) {
-  classifier = 'javadoc'
-  //basename = artifact_id
-  from androidJavadocs.destinationDir
-}
-
-task androidSourcesJar(type: Jar) {
-  classifier = 'sources'
-  //basename = artifact_id
-  from android.sourceSets.main.allSource
-}
-
-artifacts {
-  archives androidSourcesJar
-  archives androidJavadocsJar
-}
-
-signing {
-  required { has("release") && gradle.taskGraph.hasTask("uploadArchives") }
-  sign configurations.archives
-}
-
-uploadArchives {
-  repositories.mavenDeployer {
-    beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-    repository(url: 'https://oss.sonatype.org/service/local/staging/deploy/maven2/') {
-      authentication(userName: sonatypeUsername, password: sonatypePassword)
-    }
-
-    snapshotRepository(url: 'https://oss.sonatype.org/content/repositories/snapshots/') {
-      authentication(userName: sonatypeUsername, password: sonatypePassword)
-    }
-
-    pom {
-      project {
-        name 'RoundedImageView'
-        packaging 'aar'
-
-        description 'Fast ImageView with support for rounded corners and borders'
-        url 'https://github.com/vinc3m1/RoundedImageView'
-
-        scm {
-          url 'scm:git@github.com:vinc3m1/RoundedImageView.git'
-          connection 'scm:git@github.com:vinc3m1/RoundedImageView.git'
-          developerConnection 'scm:git@github.com:vinc3m1/RoundedImageView.git'
+    sourceSets {
+        main {
+            manifest.srcFile 'AndroidManifest.xml'
+            java.srcDirs = ['src']
+            resources.srcDirs = ['src']
+            aidl.srcDirs = ['src']
+            renderscript.srcDirs = ['src']
+            res.srcDirs = ['res']
+            assets.srcDirs = ['assets']
         }
 
-        licenses {
-          license {
-            name 'The Apache Software License, Version 2.0'
-            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-            distribution 'repo'
-          }
-        }
+        // Move the tests to tests/java, tests/res, etc...
+        instrumentTest.setRoot('tests')
 
-        developers {
-          developer {
-            id 'vinc3m1'
-            name 'Vince Mi'
-            email 'vince@makeramen.com'
-          }
-        }
-      }
+        // Move the build types to build-types/<type>
+        // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
+        // This moves them out of them default location under src/<type>/... which would
+        // conflict with src/ being used by the main source set.
+        // Adding new build types or product flavors should be accompanied
+        // by a similar customization.
+        debug.setRoot('build-types/debug')
+        release.setRoot('build-types/release')
     }
-  }
 }
